--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
     margin: 0;
-
-    background-color: #121212;
-
+    background-color:rgb(255, 241, 205);
     font-family: Roboto, sans-serif;
     font-size: 16px;
     line-height: 1.5;
@@ -23,12 +21,10 @@ p {
 
 .tabs__nav-btn {
     padding: 15px 30px;
-
     font-size: 20px;
-
-    background-color: #f5f5f5;
+    background-color: #cff8fb;
     border: 0;
-    border-right: 1px solid #ddd;
+    border-right: 3px solid #ddd;
     cursor: pointer;
 }
 
@@ -37,12 +33,12 @@ p {
 }
 
 .tabs__nav-btn:hover {
-    background-color: #ddd;
+    background-color: rgb(251, 228, 153);
 }
 
 .tabs__nav-btn.active {
-    background-color: #5e3ddf;
-    border-right-color: #5e3ddf;
+    background-color: #28c0fc;
+    /* border-right-color: #28c0fc; */
     color: #fff;
 }
 
